--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  min-height: 100%;
+  line-height: 20px;
+  font-weight: 400;
 }
 
 a {
@@ -13,6 +21,18 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+div {
+  display: block;
+}
+
+h1 {
+  margin-top: 20px;
+  margin-bottom: 15px;
+  font-size: 40px;
+  line-height: 48px;
+  font-weight: 400;
 }
 
 @media (prefers-color-scheme: dark) {
