--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,10 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  min-height: 100%;
+  line-height: 20px;
+  font-weight: 400;
 }
 
 a {
@@ -17,6 +21,29 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+div {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+h1 {
+  margin-top: 20px;
+  margin-bottom: 15px;
+  font-size: 40px;
+  line-height: 48px;
+  font-weight: 400;
+  margin: 0.67em 0;
 }
 
 @media (prefers-color-scheme: dark) {
