--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,12 +27,23 @@ div {
   display: block;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
 h1 {
   margin-top: 20px;
   margin-bottom: 15px;
   font-size: 40px;
   line-height: 48px;
   font-weight: 400;
+  margin: 0.67em 0;
 }
 
 @media (prefers-color-scheme: dark) {
